[package]
name = "skt2ws"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
serde = { version = "=1.0.223", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures-util = { version = "0.3", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

[features]
benchmark = ["futures-util", "tokio-tungstenite"]

[[bin]]
name = "benchmark"
required-features = ["benchmark"]
